[gd_scene load_steps=36 format=3 uid="uid://bvbn04dn16oc8"]

[ext_resource type="Script" uid="uid://bdnfupykgjheg" path="res://game/objects/player/player.gd" id="1_b2mth"]
[ext_resource type="Texture2D" uid="uid://47tkvi8sr5hm" path="res://assets/player/player_idle.png" id="2_8soms"]
[ext_resource type="Texture2D" uid="uid://b2xefkh34f5hq" path="res://assets/player/player_walk.png" id="3_a4w0n"]
[ext_resource type="Texture2D" uid="uid://b3020a4k7povr" path="res://assets/player/player_idle_0.png" id="3_k36d3"]
[ext_resource type="Script" uid="uid://r7o5aqskg3ge" path="res://game/objects/player/camera_2d.gd" id="4_5fytw"]
[ext_resource type="PackedScene" uid="uid://dfaw1s1ofgx11" path="res://game/UI/HUD/HUD.tscn" id="4_a4w0n"]
[ext_resource type="Texture2D" uid="uid://cl8grkl5lp8do" path="res://assets/player/player_walk_0.png" id="5_hpwsx"]
[ext_resource type="AudioStream" uid="uid://cxibi61qdqffv" path="res://assets/sounds/Steps_floor-016.ogg" id="8_hpwsx"]
[ext_resource type="AudioStream" uid="uid://dkk8awnqf6xcc" path="res://assets/sounds/lighter.mp3" id="9_mg0da"]
[ext_resource type="AudioStream" uid="uid://c5wdx1lp3i6lc" path="res://assets/sounds/get_entity.mp3" id="10_760k0"]
[ext_resource type="AudioStream" uid="uid://b4pb2s70rshbd" path="res://assets/sounds/evade.mp3" id="11_rfmqm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4w0n"]
atlas = ExtResource("2_8soms")
region = Rect2(0, 0, 64, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fytw"]
atlas = ExtResource("2_8soms")
region = Rect2(64, 0, 64, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg0da"]
atlas = ExtResource("3_k36d3")
region = Rect2(0, 0, 64, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_760k0"]
atlas = ExtResource("3_k36d3")
region = Rect2(64, 0, 64, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ste8"]
atlas = ExtResource("3_a4w0n")
region = Rect2(0, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_anr75"]
atlas = ExtResource("3_a4w0n")
region = Rect2(128, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_epvkq"]
atlas = ExtResource("3_a4w0n")
region = Rect2(256, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ghna"]
atlas = ExtResource("3_a4w0n")
region = Rect2(384, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0mij"]
atlas = ExtResource("3_a4w0n")
region = Rect2(512, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb4gm"]
atlas = ExtResource("3_a4w0n")
region = Rect2(640, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv2nh"]
atlas = ExtResource("3_a4w0n")
region = Rect2(768, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_n270p"]
atlas = ExtResource("3_a4w0n")
region = Rect2(896, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ep63"]
atlas = ExtResource("3_a4w0n")
region = Rect2(1024, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfmqm"]
atlas = ExtResource("5_hpwsx")
region = Rect2(0, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv1vh"]
atlas = ExtResource("5_hpwsx")
region = Rect2(128, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjyx3"]
atlas = ExtResource("5_hpwsx")
region = Rect2(256, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xsq7"]
atlas = ExtResource("5_hpwsx")
region = Rect2(384, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ifup"]
atlas = ExtResource("5_hpwsx")
region = Rect2(512, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wf3o"]
atlas = ExtResource("5_hpwsx")
region = Rect2(640, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hayy"]
atlas = ExtResource("5_hpwsx")
region = Rect2(768, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihupb"]
atlas = ExtResource("5_hpwsx")
region = Rect2(896, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_io2ad"]
atlas = ExtResource("5_hpwsx")
region = Rect2(1024, 0, 128, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_a4w0n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4w0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fytw")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg0da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_760k0")
}],
"loop": true,
"name": &"idle_0",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ste8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anr75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epvkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ghna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0mij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb4gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv2nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n270p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ep63")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfmqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv1vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjyx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xsq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ifup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wf3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hayy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihupb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io2ad")
}],
"loop": true,
"name": &"walking_0",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5fytw"]
radius = 22.0
height = 144.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
floor_snap_length = 30.0
script = ExtResource("1_b2mth")

[node name="Animation" type="AnimatedSprite2D" parent="."]
texture_filter = 3
texture_repeat = 3
sprite_frames = SubResource("SpriteFrames_a4w0n")
animation = &"walking_0"
frame_progress = 0.102212

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_5fytw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -54)
limit_left = 0
limit_right = 16785
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
script = ExtResource("4_5fytw")

[node name="HealthTimer" type="Timer" parent="."]

[node name="Hud" parent="." instance=ExtResource("4_a4w0n")]

[node name="EvadeCooldownTimer" type="Timer" parent="."]

[node name="StepSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hpwsx")
volume_db = -15.0

[node name="SmokeCigaretteSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mg0da")
volume_db = -10.0

[node name="GetCigaretteSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_760k0")
volume_db = -10.0

[node name="EvadeAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_rfmqm")
volume_db = -13.0
pitch_scale = 1.5

[connection signal="timeout" from="HealthTimer" to="." method="_on_health_timer_timeout"]
[connection signal="timeout" from="EvadeCooldownTimer" to="." method="_on_evade_cooldown_timer_timeout"]
